--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="zh-CN">
+  <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-
-<body>
-<ul>
-    {% for title in titles %}
-    <li>{{ title}}</li>
-    {% endfor %}
-</ul>
-</body>
+    <title>Index</title>
+  </head>
+  <body>
+    <ul>
+     {% for file in files %}
+     <li><a href="{{ url_for('file', file_id=file.id) }}" target="_blank">{{ file.title }}</a></li>
+     {% endfor %}
+    </ul>
+  </body>
 </html>
+
